--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -21,3 +21,9 @@
     color: black !important;
     transition: all 0.5s ease;
 }
+
+@media(max-width:1040px){
+	.navigation {
+		display: none;
+	}
+}
