--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -11,30 +11,20 @@
     padding: 30px 0;
     margin-inline: auto;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between; 
 }
 
-.general {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+@media(max-width:1440px){
+	.main {
+		padding: 30px 10px;
+	}
 }
 
-.item {
-    color: #fff;
-}
-
-.item a {
-    color: white !important;
-    transition: all 0.3s ease;
-}
-
-.item a:hover {
-    color: #393E46 !important;
-    transition: all 0.3s ease;
-}
-
-.item a.active {
-    color: black !important;
-    transition: all 0.3s ease;
+@media(max-width:380px){
+	.main {
+		flex-direction: column;
+        align-items: center;
+        gap: 15px;
+	}
 }
