--- a/src/components/GeneralInfoLinks/GeneralInfoLinks.module.scss
+++ b/src/components/GeneralInfoLinks/GeneralInfoLinks.module.scss
@@ -1,11 +1,13 @@
 .main {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    flex-wrap: wrap;
+    gap: 15px;
 }
 
 .item {
     color: #fff;
+    padding-left: 10px;
 }
 
 .item a {
@@ -21,4 +23,10 @@
 .item a.active {
     color: black !important;
     transition: all 0.3s ease;
+}
+
+@media(max-width:1040px){
+	.main {
+		display: none;
+	}
 }
