Реализована адаптивная верстка страницы Contacts, данные контактов и ссылок вынесены в файл с константами

--- a/src/index.scss
+++ b/src/index.scss
@@ -41,7 +41,7 @@ body{
 	-moz-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%;
 	color: #000;
-	background: #FFFFFF;
+	background: #f3f3f3;
 	font-family: 'Poppins', sans-serif;
 }
 
