--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -2,6 +2,10 @@
     width: 100%;
     display: flex;
     justify-content: space-around;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    z-index: 5;
     background-color: rgb(25, 177, 178);
     box-shadow: 0 5px 5px rgba(12, 87, 87, 0.685);
 }
