Добавлен фон на страницы, решена проблема отступов

--- a/src/components/BreadCrumbs/BreadCrumbs.module.scss
+++ b/src/components/BreadCrumbs/BreadCrumbs.module.scss
@@ -1,5 +1,6 @@
 .breadCrumbs {
-    margin: min(110px, 25%) 0 min(125px, 23%) 3px;
+    padding: min(110px, 25%) 0 min(125px, 23%) 3px;
+    text-align: center;
     & h1 {
         margin: 0 0 26px 3px;
         font-weight: 500;
