--- a/src/pages/Guarantee/Guarantee.module.scss
+++ b/src/pages/Guarantee/Guarantee.module.scss
@@ -3,24 +3,43 @@
     margin-inline: auto;
     background-color: #fff;
     margin-bottom: 40px;
+    & h2 {
+        font-size: 30px;
+        font-weight: 600;
+        padding: 0px 20px 10px 20px;
+    }
+    & p {
+        font-size: 20px;
+        padding: 0 20px 20px 20px;
+    }
+    & ul {
+        padding: 0 20px 20px 20px;
+    }
+    & li {
+        margin: 0 0 10px 20px;
+        list-style: disc;
+        font-size: 20px;
+    }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 @media(max-width:1440px){
     .main {
         padding: 0 10px 30px 10px;
+    }
+}
+
+@media(max-width:767px){
+    .main {
+        & h2 {
+            font-size: 27px;
+        }
+    }
+}
+
+@media(max-width:479px){
+    .main {
+        & h2 {
+            font-size: 24px;
+        }
     }
 }
