--- a/src/pages/Product/Product.module.scss
+++ b/src/pages/Product/Product.module.scss
@@ -21,11 +21,13 @@
 .productInfo {
     width: min(700px, 50%);
     & h1 {
+        margin-bottom: 20px;
         font-size: 56px;
         font-weight: 300;
         line-height: 1;
     }
     & h2 {
+        margin-bottom: 40px;
         font-size: 36px;
         font-weight: 700;
         line-height: 1;
