Верстка адаптивного баннера с доставкой и вынос его в отдельный компонент DeliveryBanner

--- a/src/pages/Cart/Cart.module.scss
+++ b/src/pages/Cart/Cart.module.scss
@@ -2,9 +2,8 @@
     width: min(1440px, 100%);
     margin-inline: auto;
     background-color: #fff;
-    margin-bottom: 40px;
+    padding: 0 30px 40px 30px;
 }
-
 
 
 
