--- a/src/components/ProductsInCartTable/TableItem/TableItem.module.scss
+++ b/src/components/ProductsInCartTable/TableItem/TableItem.module.scss
@@ -1,7 +1,3 @@
-.main {
-    padding-bottom: 30px;
-}
-
 .tableItem {
     height: 100px;
     padding: 20px 0;
@@ -10,7 +6,7 @@
     display: grid;
     grid-template-columns: 
         5% 
-        minmax(70px, 1fr) 
+        70px
         minmax(300px, 1fr) 
         125px
         minmax(132px, 1fr) 
