Закончена верстка страницы Cart, не адаптивна

--- a/src/components/ProductsInCartTable/ProductsInCartTable.module.scss
+++ b/src/components/ProductsInCartTable/ProductsInCartTable.module.scss
@@ -26,3 +26,10 @@
         justify-content: center;
     }
 }
+
+.empyCartMessage {
+    padding: 20px 0 20px;
+    font-size: 50px;
+    color: rgba(0, 0, 0, 0.199);
+    text-align: center;
+}
