--- a/src/pages/Guarantee/Guarantee.module.scss
+++ b/src/pages/Guarantee/Guarantee.module.scss
@@ -2,7 +2,7 @@
     width: min(1440px, 100%);
     margin-inline: auto;
     background-color: #fff;
-    margin-bottom: 40px;
+    padding-bottom: 40px;
     & h2 {
         font-size: 30px;
         font-weight: 600;
