--- a/src/components/DeliveryBanner/DeliveryBanner.module.scss
+++ b/src/components/DeliveryBanner/DeliveryBanner.module.scss
@@ -1,7 +1,7 @@
 .main {
     padding: 0 0 30px 0;
     display: flex;
-    gap: 20px;
+    gap: max(20px, 2%);
     align-items: center;
     & .imgContainer {
         position: relative;
