--- a/src/components/ProductsInCartTable/TableItem/TableItem.module.scss
+++ b/src/components/ProductsInCartTable/TableItem/TableItem.module.scss
@@ -14,11 +14,28 @@
         5%;
     & div {
         font-size: 16px;
-        line-height: 60px;
+        line-height: 70px;
     }
     & .imgContainer {
         display: flex;
         align-self: center;
         justify-content: center;
     }
+}
+
+.productImage {
+    display: block;
+    height: 70px;
+    width: 60px;
+    & img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+}
+
+.productInfo {
+    display: flex;
+    flex-wrap: wrap;
+    line-height: 70px;
 }
