--- a/src/components/Cart/Cart.module.scss
+++ b/src/components/Cart/Cart.module.scss
@@ -1,5 +1,6 @@
 .cartContainer {
     display: block;
+    position: relative;
     & img {
         width: 25px;
         transition: all 0.3s ease;
@@ -8,4 +9,22 @@
         transform: scale(1.3, 1.3);
         transition: all 0.3s ease;
     }
+}
+
+.productsCount {
+    position: absolute;
+    right: -12px;
+    top: -14px;
+    width: 17px;
+    height: 17px;
+    border-radius: 50%;
+    background-color: #f3f3f3;
+    text-align: center;
+    font-size: 12px;
+    font-weight: 600;
+    line-height: 1.5;
+}
+
+.hidden {
+    display: none;
 }
