--- a/src/pages/Checkout/Checkout.module.scss
+++ b/src/pages/Checkout/Checkout.module.scss
@@ -2,10 +2,44 @@
     width: min(1440px, 100%);
     margin-inline: auto;
     background-color: #fff;
-    margin-bottom: 40px;
+    padding-bottom: 40px;
 }
 
+.container {
+    display: flex;
+}
 
+.cart {
+    display: flex;
+    flex-direction: column;
+    width: min(530px, 100%);
+    & h2 {
+        font-size: 21px;
+        font-weight: 600;
+    }
+    .buttonBlock {
+        display: flex;
+        justify-content: center;
+        gap: 30px;
+        .orderButton {
+            display: block;
+            width: 200px;
+            height: 52px;
+            font-size: 17px;
+            letter-spacing: 0.02em;
+            font-weight: 600;
+            text-align: center;
+            border-radius: 15px;
+            background: rgb(25, 177, 178);
+            transition: all 0.3s ease;
+        }
+        .orderButton:hover {
+            background: rgb(11, 133, 133);
+            box-shadow: 0 0 5px rgba(12, 87, 87, 0.685);
+            transition: all 0.3s ease;
+        }  
+    }
+}
 
 
 
