--- a/src/components/Pagination/Pagination.module.scss
+++ b/src/components/Pagination/Pagination.module.scss
@@ -18,7 +18,7 @@
     transition: all 0.3s ease;
 }
 
-.activePaginationButton {
+.activePaginationButton, .paginationButton:hover {
     background: #000;
     color: #fff;
 }
