Фикс стилей карточки товара на странице shop

--- a/src/components/Button/LinkButton/LinkButton.module.scss
+++ b/src/components/Button/LinkButton/LinkButton.module.scss
@@ -1,5 +1,6 @@
 .main {
     display: block;
+    margin-inline: auto;
     text-align: center;
     border-radius: 15px;
     background: rgb(25, 177, 178);
