--- a/src/components/ProductCard/ProductCard.module.scss
+++ b/src/components/ProductCard/ProductCard.module.scss
@@ -2,20 +2,23 @@
     width: min(350px, 100%);
     height: min(478px, auto);
     padding: 20px 21px;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-rows: 1fr 50px 50px;
     align-items: center;
     border-radius: 30px;
     background: #f3f3f3;
     & img {
         width: 100%;
-        height: 100%;
+        height: auto;
+        object-fit: cover;
+        border-radius: 15px;
     }
     & h3 {
         font-size: 30px;
         font-style: normal;
         font-weight: 500;
         line-height: normal;
+        text-align: center;
     }
     & p {
         font-size: 20px;
@@ -23,5 +26,6 @@
         font-weight: 700;
         line-height: normal;
         margin-bottom: 10px;
+        text-align: center;
     }
 }
