Получение данные категорий с сервера, создание categoryApi

--- a/src/components/Pagination/Pagination.module.scss
+++ b/src/components/Pagination/Pagination.module.scss
@@ -8,7 +8,7 @@
     height: 41px;
     border: 1px solid #000000;
     border-radius: 10px;
-    background: #E5E5E5;
+    background: #fff;
     font-weight: 500;
     font-size: 17px;
     line-height: 140%;
