--- a/src/components/ProductFilter/ProductFilter.module.scss
+++ b/src/components/ProductFilter/ProductFilter.module.scss
@@ -13,18 +13,22 @@
     font-size: 17px;
     line-height: 140%;
     letter-spacing: 0.02em;
-    border: 1px solid black;
+    border: 1px solid rgb(18, 134, 134);
     border-radius: 10px;
     margin-right: 10px;
     cursor: pointer;
-    transition: all 0.5s ease;
+    transition: all 0.3s ease;
+}
+
+.sortButtonItem:hover {
+    background-color: rgba(25, 178, 178, 0.753);
 }
 
 .sortButtonItemActive {
-    border: 1px solid black;
-    background: #000000;
+    box-shadow: 0 5px 5px rgba(12, 87, 87, 0.685);
+    background: rgb(25, 177, 178);
     color: #fff;
-    transition: all 0.5s ease;
+    transition: all 0.3s ease;
 }
 
 .categoriesButton {
@@ -37,7 +41,7 @@
     letter-spacing: 0.02em;
     border: 1px solid black;
     border-radius: 10px;
-    transition: all 0.5s ease;
+    transition: all 0.3s ease;
 }
 
 @media(max-width:1100px){
@@ -75,7 +79,7 @@
         flex-direction: column;
         visibility: hidden;
         opacity: 0;
-        transition: all 0.5s ease;
+        transition: all 0.3s ease;
     }
     .sortButtonItem {
         display: inline-block;
@@ -88,11 +92,11 @@
         border: 1px solid black;
         background: #000000;
         color: #fff;
-        transition: all 0.5s ease;
+        transition: all 0.3s ease;
     }
     .visible {
         visibility: visible;
         opacity: 1;
-        transition: all 0.5s ease;
+        transition: all 0.3s ease;
     }
 }
