--- a/src/components/ProductsInCartTable/TableItem/TableItem.module.scss
+++ b/src/components/ProductsInCartTable/TableItem/TableItem.module.scss
@@ -20,6 +20,15 @@
         display: flex;
         align-self: center;
         justify-content: center;
+        background-color: #fff;
+        cursor: pointer;
+        & img {
+          transition: all 0.3s ease;  
+        }
+    }
+    & .imgContainer:hover img {
+        transition: all 0.3s ease;
+        transform: scale3d(1.3, 1.3, 1);
     }
 }
 
