Получение данных корзины, описание таблицы с товарами в корзине на странице Checkout

--- a/src/pages/Checkout/Checkout.module.scss
+++ b/src/pages/Checkout/Checkout.module.scss
@@ -16,6 +16,7 @@
     & h2 {
         font-size: 21px;
         font-weight: 600;
+        margin-bottom: 20px;
     }
     .buttonBlock {
         display: flex;
@@ -28,6 +29,7 @@
             font-size: 17px;
             letter-spacing: 0.02em;
             font-weight: 600;
+            color: #fff;
             text-align: center;
             border-radius: 15px;
             background: rgb(25, 177, 178);
