--- a/src/components/ProductsInCartTable/ProductsInCartTable.module.scss
+++ b/src/components/ProductsInCartTable/ProductsInCartTable.module.scss
@@ -33,3 +33,34 @@
     color: rgba(0, 0, 0, 0.199);
     text-align: center;
 }
+
+.addProductToCartButon {
+    width: 180px;
+    height: 50px;
+    border-radius: 15px;
+    color: white;
+    font-size: 15px;
+    line-height: 1;
+    letter-spacing: 0.02em;
+    background: rgb(25, 177, 178);
+    transition: all 0.3s ease;
+}
+
+.addProductToCartButon:hover {
+    background: rgb(11, 133, 133);
+    box-shadow: 0 0 5px rgba(12, 87, 87, 0.685);
+    transition: all 0.3s ease;
+}
+
+.promoContainer {
+    padding: 10px;
+    display: flex;
+    gap: 30px;
+    align-items: center;
+    & label {
+        color: rgb(25, 177, 178) !important;
+    }
+    & div::after {
+        border-bottom: 2px solid rgb(25, 177, 178) !important;
+    }
+}
