--- a/src/components/CheckoutModal/CheckoutModal.module.scss
+++ b/src/components/CheckoutModal/CheckoutModal.module.scss
@@ -19,7 +19,7 @@
     top: 50%;
     background-color: #fff;
     border-radius: 15px;
-    & img {
+    & .closeImg {
         display: block;
         position: absolute;
         right: 20px;
@@ -29,7 +29,7 @@
         cursor: pointer;
         transition: all 0.3s ease;
     }
-    & img:hover {
+    & .closeImg:hover {
         transform: scale3d(1.2, 1.2, 1);
         transition: all 0.3s ease;
     }
