--- a/src/components/ImportantDetails/ImportantDetails.module.scss
+++ b/src/components/ImportantDetails/ImportantDetails.module.scss
@@ -1,7 +1,7 @@
 .main {
-    width: min(1110px, 100%);
+    width: min(1440px, 100%);
     margin-inline: auto;
-    padding-bottom: 30px;
+    padding: 0 10px 30px 10px;
 }
 
 .sectionHeader {
@@ -11,6 +11,7 @@
     font-size: 40px;
     line-height: 110%;
     letter-spacing: 0.02em;
+    text-align: center;
 }
 
 .importantBlock {
@@ -20,13 +21,14 @@
 }
 
 .importantItem {
-    width: 305px;
+    width: 30%;
     & h3 {
         margin: 37px 0 24px 0;
         font-weight: 500;
         font-size: 25px;
         line-height: 140%;
         letter-spacing: 0.02em;
+        text-align: center;
     }
     & p {
         font-weight: 500;
@@ -34,14 +36,17 @@
         line-height: 140%;
         letter-spacing: 0.02em;
     }
+    & .imgContainer {
+        text-align: center;
+    }
     & img {
         height: 61px;
     }
 }
 
-@media(max-width:1110px){
+@media(max-width:1440px){
     .main {
-        padding: 0 10px 30px 10px;
+        padding: 0 0px 30px 0px;
     }
 }
 
@@ -76,10 +81,15 @@
     }
     .importantItem {
         display: flex;
+        width: 100%;
         flex-direction: column;
         align-items: center;
         & h3 {
             margin: 20px 0 15px 0;
+        }
+
+        & p {
+            text-align: center;
         }
     }
 }
